<?xml version="1.0" encoding="utf-8"?>


<!--
 ! File:   strings.xml
 ! Author: James Kuczynski
 ! Email: jkuczyns@cs.uml.edu
 ! File Description:
 !
 ! Last Modified: 9/18/2015
 !-->

<resources>
    <string name="app_name">AndroidVideoIp3</string>
    <string name="action_settings">Settings</string>
    <string name="ip_address">IP Address</string>
    <string name="port_1">Port 1</string>
    <string name="port_2">Port 2</string>
    <string name="port_3">Port 3</string>
    <string name="ros_topic_left">ROS Topic (left cam)</string>
    <string name="ros_topic_right">ROS Topic (right cam)</string>
    <string name="update">Reload Video</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>
